--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.4.1"
+    "gulp-uglify": "^1.4.1",
+    "jsdoc": "^3.3.2"
   }
 }
